--- a/Desafio iOS Concrete Solutions/Desafio iOS/Podfile
+++ b/Desafio iOS Concrete Solutions/Desafio iOS/Podfile
@@ -6,7 +6,10 @@ target 'Desafio iOS' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
   pod 'Alamofire', '~> 4.0'
+  pod 'AlamofireImage', '~> 3.1'
   pod 'SwiftyJSON'
+  pod 'ObjectMapper', '~> 2.2'
+  pod 'Kingfisher'
 
   # Pods for Desafio iOS
 
